--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create project with react and express server together",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npm run dev",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
