--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "url": "https://github.com/clenondavis/weTempo/issues"
   },
   "homepage": "https://github.com/clenondavis/weTempo#readme",
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.4"
+  },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
